objects/Rate__c.object
<CustomObject>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Währung</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Isin__c</fullName>
        <formula>Fund__r.ISIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund Isin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Label__c</fullName>
        <formula>Fund__r.Label__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fund Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fonds</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Kurse</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KURSImpID__c</fullName>
        <externalId>true</externalId>
        <label>KURSImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Kurs_ID__c</fullName>
        <label>Old Kurs ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trend__c</fullName>
        <label>Entwicklung</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Wert</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Kurs</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kurse</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fund__c</columns>
        <columns>Date__c</columns>
        <columns>Trend__c</columns>
        <columns>Value__c</columns>
        <columns>Currency__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>